# pm-os

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: README.md  design-tokens.md  manifesto.md
docs/adr/: ADR-001-core-architecture.md  ADR-002-context-builder.md  ADR-003-package-structure.md  ADR-004-artifact-organization.md  ADR-005-structured-context-sources.md
docs/architecture/: architecture-diagrams.md  components.md  overview.md  workflows.md
docs/contributing/: contributing.md
docs/learning/: sprint-001-learning.md  sprint-001.md  sprint-002-learning.md  sprint-003-learning.md  sprint-004-learning.md  sprint-005-learning.md  sprint-006-learning.md  sprint-008-learning.md  (+1 more)
fake-context/: analise-concorrencia.md  roadmap.md
mcp/: server.py
scripts/: run_create_prd.py  run_scope_guard.py  run_validate_prd.py  run_web.py  run_workspace_scan.py
tests/: test_ai_client.py  test_change_tracker.py  test_cipher.py  test_config_manager.py  test_context_builder.py  test_create_prd_workflow.py  test_i18n.py  test_initiative_repository.py  test_job_repository.py  test_markdown_renderer.py  test_markdown_writer.py  test_prd_validator.py  test_product_docs_service.py  test_prompt_builder.py  test_request_limits.py  test_safe_filename.py  test_safe_http.py  test_scope_guard.py  test_security.py  test_validation_report.py  test_web_e2e.py  test_workspace_scan_workflow.py
(+101 files in other folders)
