[project]
name = "pm-os"
version = "0.1.0"
description = "AI Product Manager Operating System"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "markdown>=3.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"