[project]
name = "pm-os"
version = "0.1.0"
description = "AI Product Manager Operating System"
requires-python = ">=3.9"
dependencies = [
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0,<0.129.0",
    "starlette>=0.40.0,<0.51.0",
    "httpx>=0.27.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.1.0",
    "python-multipart>=0.0.6",
    "markdown>=3.6",
]

[project.optional-dependencies]
pdf = ["PyMuPDF>=1.24.0"]
mcp = ["mcp>=1.10.0; python_version >= '3.10'"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
pm-studio = "pm_os.web.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
